[gd_scene load_steps=7 format=2]

[ext_resource path="res://blackboard.jpg" type="Texture" id=1]
[ext_resource path="res://Feltpen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Quiz_Game.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[node name="Quiz_Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PertanyaanContainer" type="VBoxContainer" parent="."]
margin_left = 11.3313
margin_top = 30.1606
margin_right = 1011.33
margin_bottom = 230.161
rect_min_size = Vector2( 0, 200 )
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PertanyaanPlaceholder" type="Label" parent="PertanyaanContainer"]
margin_top = 68.0
margin_right = 1000.0
margin_bottom = 131.0
rect_min_size = Vector2( 1000, 0 )
custom_fonts/font = SubResource( 1 )
text = "Pertanyaan Placeholder"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="."]
margin_left = 255.973
margin_top = 294.726
margin_right = 755.973
margin_bottom = 363.726
custom_fonts/font = SubResource( 2 )
text = "Coba Lagi?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnContainer" type="VBoxContainer" parent="."]
margin_left = 255.973
margin_top = 260.484
margin_right = 755.973
margin_bottom = 560.484
rect_min_size = Vector2( 500, 300 )
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="BtnContainer"]
margin_top = 36.0
margin_right = 500.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "Jawaban 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="BtnContainer"]
margin_top = 99.0
margin_right = 500.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 3 )
text = "Jawaban 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="BtnContainer"]
margin_top = 162.0
margin_right = 500.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 3 )
text = "Jawaban 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="BtnContainer"]
margin_top = 225.0
margin_right = 500.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 3 )
text = "Jawaban 4"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
